--- a/index.html
+++ b/index.html
@@ -15,22 +15,26 @@
   </header>
 
   <section class="stained-glass">
-    <div class="panel">
-  <img src="https://images.unsplash.com/photo-1584476037416-2c251d2b0bda?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Floral Stained Glass Window" class="panel-icon">
-</div>
-    <div class="panel">
-  <img src="https://images.unsplash.com/photo-1517324242524-cd87de1df865?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Blue Stained Glass Window" class="panel-icon">
-</div>
-    <div class="panel">
-      <img src="https://images.unsplash.com/photo-1565210579835-757793567694?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Interior of Empty Church" class="panel-icon".
-    </div>
-    <div class="panel">
-      <img src="https://images.unsplash.com/photo-1708903763127-a8330ce13620?q=80&w=1630&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="A Stained Glass Window With An Anchor" class="panel-icon"
-    </div>
-    <div class="panel">
-      <img src="https://images.unsplash.com/photo-1663517951072-a60378b77811?q=80&w=2127&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="A Brown and Yellow Stained Glass Window" class="panel-icon"
-    </div>
-  </section>
+  <div class="panel star-panel">
+    <img src="assets/star-icon.png" alt="Star" class="panel-icon star">
+  </div>
+  <div class="panel star-panel">
+    <img src="assets/star-icon2.png" alt="Star" class="panel-icon star">
+  </div>
+  <div class="panel">
+    <img src="assets/moon-icon.png" alt="Moon" class="panel-icon moon-sun">
+  </div>
+  <div class="panel star-panel">
+    <img src="assets/star-icon3.png" alt="Star" class="panel-icon star">
+  </div>
+  <div class="panel">
+    <img src="assets/sun-icon.png" alt="Sun" class="panel-icon moon-sun">
+  </div>
+  <div class="panel star-panel">
+    <img src="assets/star-icon4.png" alt="Star" class="panel-icon star">
+  </div>
+</section>
+
 
   <footer>
     “The stars remember who you are.” ✨<br>
