--- a/index.html
+++ b/index.html
@@ -1,44 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Letters to Little Me</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Quicksand&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Quicksand&display=swap"
+    rel="stylesheet"
+  />
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="stars">
   <header>
     <h1>Letters to Little Me</h1>
     <p>Streaming under the stars — guided by sun goddess energy 🌞</p>
-    <a class="twitch-link" href="https://www.twitch.tv/letterstolittleme" target="_blank">Watch on Twitch</a>
+    <a
+      class="twitch-link"
+      href="https://www.twitch.tv/letterstolittleme"
+      target="_blank"
+      >Watch on Twitch</a
+    >
   </header>
 
   <section class="stained-glass">
-  <div class="panel star-panel">
-    <img src="assets/star-icon.png" alt="Star" class="panel-icon star">
-  </div>
-  <div class="panel star-panel">
-    <img src="assets/star-icon2.png" alt="Star" class="panel-icon star">
-  </div>
-  <div class="panel">
-    <img src="assets/moon-icon.png" alt="Moon" class="panel-icon moon-sun">
-  </div>
-  <div class="panel star-panel">
-    <img src="assets/star-icon3.png" alt="Star" class="panel-icon star">
-  </div>
-  <div class="panel">
-    <img src="assets/sun-icon.png" alt="Sun" class="panel-icon moon-sun">
-  </div>
-  <div class="panel star-panel">
-    <img src="assets/star-icon4.png" alt="Star" class="panel-icon star">
-  </div>
-</section>
+    <div class="panel star-panel">
+      <img
+        src="assets/star-icon.svg"
+        alt="Star"
+        class="panel-icon star moon-sun"
+      />
+    </div>
+    <div class="panel star-panel">
+      <img
+        src="assets/star-icon.svg"
+        alt="Star"
+        class="panel-icon star moon-sun"
+      />
+    </div>
+    <div class="panel">
+      <img
+        src="assets/moon-icon.svg"
+        alt="Moon"
+        class="panel-icon moon-sun moon"
+      />
+    </div>
+    <div class="panel star-panel">
+      <img
+        src="assets/star-icon.svg"
+        alt="Star"
+        class="panel-icon star moon-sun"
+      />
+    </div>
+    <div class="panel">
+      <img
+        src="assets/sun-icon.svg"
+        alt="Sun"
+        class="panel-icon moon-sun sun"
+      />
+    </div>
+    <div class="panel star-panel">
+      <img
+        src="assets/star-icon.svg"
+        alt="Star"
+        class="panel-icon star moon-sun"
+      />
+    </div>
+  </section>
 
+  <!-- Shooting stars -->
+  <div class="shooting-star" style="top: 10%; left: 80%; animation-delay: 0s"></div>
+  <div class="shooting-star" style="top: 25%; left: 65%; animation-delay: 4s"></div>
+  <div class="shooting-star" style="top: 40%; left: 90%; animation-delay: 7s"></div>
+  <div class="shooting-star" style="top: 15%; left: 50%; animation-delay: 10s"></div>
+  <div class="shooting-star" style="top: 5%; left: 30%; animation-delay: 13s"></div>
 
   <footer>
-    “The stars remember who you are.” ✨<br>
-    Made with love, sunbeams, and a little magic.
+    “The stars remember who you are.” ✨<br />
+    Made with love, sunbeams, and a little CSS magic.
   </footer>
 </body>
 </html>
