--- a/index.html
+++ b/index.html
@@ -3,82 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Letters to Little Me</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Quicksand&display=swap"
-    rel="stylesheet"
-  />
+  <title>Awaken in the Light</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="stars">
-  <header>
-    <h1>Letters to Little Me</h1>
-    <p>Streaming under the stars — guided by sun goddess energy 🌞</p>
-    <a
-      class="twitch-link"
-      href="https://www.twitch.tv/letterstolittleme"
-      target="_blank"
-      >Watch on Twitch</a
-    >
-  </header>
+<body>
 
-  <section class="stained-glass">
-    <div class="panel star-panel">
-      <img
-        src="assets/star-icon.svg"
-        alt="Star"
-        class="panel-icon star moon-sun"
-      />
-    </div>
-    <div class="panel star-panel">
-      <img
-        src="assets/star-icon.svg"
-        alt="Star"
-        class="panel-icon star moon-sun"
-      />
-    </div>
-    <div class="panel">
-      <img
-        src="assets/moon-icon.svg"
-        alt="Moon"
-        class="panel-icon moon-sun moon"
-      />
-    </div>
-    <div class="panel star-panel">
-      <img
-        src="assets/star-icon.svg"
-        alt="Star"
-        class="panel-icon star moon-sun"
-      />
-    </div>
-    <div class="panel">
-      <img
-        src="assets/sun-icon.svg"
-        alt="Sun"
-        class="panel-icon moon-sun sun"
-      />
-    </div>
-    <div class="panel star-panel">
-      <img
-        src="assets/star-icon.svg"
-        alt="Star"
-        class="panel-icon star moon-sun"
-      />
-    </div>
-  </section>
+  <div id="stars-container"></div>
+  <canvas id="constellation-canvas"></canvas>
 
-  <!-- Shooting stars -->
-  <div class="shooting-star" style="top: 10%; left: 80%; animation-delay: 0s"></div>
-  <div class="shooting-star" style="top: 25%; left: 65%; animation-delay: 4s"></div>
-  <div class="shooting-star" style="top: 40%; left: 90%; animation-delay: 7s"></div>
-  <div class="shooting-star" style="top: 15%; left: 50%; animation-delay: 10s"></div>
-  <div class="shooting-star" style="top: 5%; left: 30%; animation-delay: 13s"></div>
+  <div class="sun-goddess" tabindex="0" aria-label="Sun Goddess">
+    <!-- Simple SVG Sun Goddess -->
+    <svg viewBox="0 0 200 200" aria-hidden="true" focusable="false">
+      <circle class="sun-core" cx="100" cy="100" r="50" />
+      <g class="sun-rays">
+        <line x1="100" y1="10" x2="100" y2="40" />
+        <line x1="100" y1="160" x2="100" y2="190" />
+        <line x1="10" y1="100" x2="40" y2="100" />
+        <line x1="160" y1="100" x2="190" y2="100" />
+        <line x1="40" y1="40" x2="60" y2="60" />
+        <line x1="140" y1="140" x2="160" y2="160" />
+        <line x1="40" y1="160" x2="60" y2="140" />
+        <line x1="140" y1="60" x2="160" y2="40" />
+      </g>
+      <circle class="face" cx="100" cy="110" r="18" />
+      <circle class="eye" cx="85" cy="105" r="3" />
+      <circle class="eye" cx="115" cy="105" r="3" />
+      <path class="smile" d="M85,120 Q100,130 115,120" />
+    </svg>
+  </div>
 
-  <footer>
-    “The stars remember who you are.” ✨<br />
-    Made with love, sunbeams, and a little magic.
-  </footer>
+  <h1>Awaken in the Light</h1>
+  <p>Embrace the warmth of the sun goddess and the magic of the stars. Feel alive, connected, and embraced by the universe’s gentle glow.</p>
+
+  <div class="stained-glass-layer layer1"></div>
+  <div class="stained-glass-layer layer2"></div>
+
   <script src="script.js"></script>
-
 </body>
 </html>
