--- a/index.html
+++ b/index.html
@@ -12,25 +12,15 @@
   <canvas id="constellation-canvas"></canvas>
 
   <div class="sun-goddess" tabindex="0" aria-label="Sun Goddess">
-    <!-- Simple SVG Sun Goddess -->
-    <svg viewBox="0 0 200 200" aria-hidden="true" focusable="false">
-      <circle class="sun-core" cx="100" cy="100" r="50" />
-      <g class="sun-rays">
-        <line x1="100" y1="10" x2="100" y2="40" />
-        <line x1="100" y1="160" x2="100" y2="190" />
-        <line x1="10" y1="100" x2="40" y2="100" />
-        <line x1="160" y1="100" x2="190" y2="100" />
-        <line x1="40" y1="40" x2="60" y2="60" />
-        <line x1="140" y1="140" x2="160" y2="160" />
-        <line x1="40" y1="160" x2="60" y2="140" />
-        <line x1="140" y1="60" x2="160" y2="40" />
-      </g>
-      <circle class="face" cx="100" cy="110" r="18" />
-      <circle class="eye" cx="85" cy="105" r="3" />
-      <circle class="eye" cx="115" cy="105" r="3" />
-      <path class="smile" d="M85,120 Q100,130 115,120" />
-    </svg>
-  </div>
+  <!-- Simple SVG Sun Goddess -->
+  <svg viewBox="0 0 200 200" aria-hidden="true" focusable="false">
+    ...
+  </svg>
+    <a href="https://twitch.tv/letterstolittleme" target="_blank" rel="noopener noreferrer" class="twitch-button" aria-label="Watch Letterstolittleme on Twitch">
+  Watch Letterstolittleme on Twitch
+</a>
+</div>
+
 
   <h1>Awaken in the Light</h1>
   <p>Embrace the warmth of the sun goddess and the magic of the stars. Feel alive, connected, and embraced by the universe’s gentle glow.</p>
