--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Awaken in the Light</title>
+  <title>Letters to Little Me</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -18,9 +18,8 @@
   <h1>Awaken in the Light</h1>
   <p>Embrace the warmth of the sun goddess and the magic of the stars. Feel alive, connected, and embraced by the universe’s gentle glow.</p>
 
-  <div class="stained-glass-layer layer1"></div>
-  <div class="stained-glass-layer layer2"></div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
