--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <a href="https://twitch.tv/letterstolittleme" target="_blank" rel="noopener noreferrer" class="twitch-button" aria-label="Watch Letterstolittleme on Twitch">
     Watch Letterstolittleme on Twitch
   </a>
+<a href="form.html" class="reading-button">
+  Request a Private Reading
+</a>
 
   <h1>Awaken in the Light</h1>
   <p>Embrace the warmth of the sun goddess and the magic of the stars. Feel alive, connected, and embraced by the universe’s gentle glow.</p>
