--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h1>Awaken in the Light</h1>
   <p>Embrace the warmth of the sun goddess and the magic of the stars. Feel alive, connected, and embraced by the universe’s gentle glow.</p>
 
-
+<div class="stars"></div>
   <script src="script.js"></script>
 </body>
 </html>
