--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div id="stars-container"></div>
   <canvas id="constellation-canvas"></canvas>
-
+<div class="container">
   <a href="https://twitch.tv/letterstolittleme" target="_blank" rel="noopener noreferrer" class="twitch-button" aria-label="Watch Letterstolittleme on Twitch">
     Watch Letterstolittleme on Twitch
   </a>
@@ -20,7 +20,7 @@
 
   <h1>Awaken in the Light</h1>
   <p>Embrace the warmth of the sun goddess and the magic of the stars. Feel alive, connected, and embraced by the universe’s gentle glow.</p>
-
+</div>
 <div class="stars"></div>
   <script src="script.js"></script>
 </body>
