--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+<button id="toggleStyle">Toggle Glass Style</button>
 
   <div id="stars-container"></div>
   <canvas id="constellation-canvas"></canvas>
