--- a/index.html
+++ b/index.html
@@ -7,23 +7,30 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<button id="toggleStyle">Toggle Glass Style</button>
 
   <div id="stars-container"></div>
   <canvas id="constellation-canvas"></canvas>
-<div class="container">
+
+  <!-- Optional Toggle Button -->
+  <button id="toggleStyle">Toggle Glass Style</button>
+
   <a href="https://twitch.tv/letterstolittleme" target="_blank" rel="noopener noreferrer" class="twitch-button" aria-label="Watch Letterstolittleme on Twitch">
     Watch Letterstolittleme on Twitch
   </a>
-<a href="form.html" class="reading-button">
-  Request a Private Reading
-</a>
 
-  <h1>Awaken in the Light</h1>
-  <p>Embrace the warmth of the sun goddess and the magic of the stars. Feel alive, connected, and embraced by the universe’s gentle glow.</p>
-</div>
-<div class="stars"></div>
+  <a href="form.html" class="reading-button">
+    Request a Private Reading
+  </a>
+
+  <!-- Stained Glass Container -->
+  <div class="container cathedral" id="glassContainer">
+    <h1>Awaken in the Light</h1>
+    <p>
+      Embrace the warmth of the sun goddess and the magic of the stars.<br>
+      Feel alive, connected, and embraced by the universe’s gentle glow.
+    </p>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
-
