--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div id="stars-container"></div>
   <canvas id="constellation-canvas"></canvas>
-<div class="container cathedral" id="glassContainer">
+<div class="container">
  
   <a href="https://twitch.tv/letterstolittleme" target="_blank" rel="noopener noreferrer" class="twitch-button" aria-label="Watch Letterstolittleme on Twitch">
     Watch Letterstolittleme on Twitch
